[project]
name = "contact-book"
version = "0.1.0"
description = ""
authors = [
    {name = "Hanna",email = "anna.potolok@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.5"
dependencies = [
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
